# d3df_digitzer_soft

./: .gitignore
.github/workflows/: python-package.yml  release.yml
Python/: README.md  analyse_waveform.py  convert_to_h5_DT5743.py  pyproject.toml  scope_convert_waveform.py
Python/.github/workflows/: release.yml
Python/d3df_single_pmt/: __init__.py  __main__.py  analyse_waveform.py  analysis.py  caen_hv.py  cli.py  converter.py  dsa_converter.py  dt5743_runner.py  plot_analysis.py  plot_timing_vs_hv.py  webapp.py
Python/d3df_single_pmt/static/: app.js
Readout_DT5743/: BATCH_MODE_QUICK_REFERENCE.md  BATCH_MODE_README.md  IMPLEMENTATION_SUMMARY.md  Readme.txt  ReleaseNotes.txt
Readout_DT5743/include/: WDBuffers.h  WDFiles.h  WDHisto.h  WDLogs.h  WDStats.h  WDWaveformProcess.h  WDconfig.h  WDplot.h  WaveDemo.h  ini.h  keyb.h
Readout_DT5743/src/: WDBuffers.c  WDFiles.c  WDHisto.c  WDLogs.c  WDStats.c  WDWaveformProcess.c  WDconfig.c  WDplot.c  WaveDemo.c  ini.c  keyb.c
