[project]
name = "d3df-single-pmt"
version = "0.3.2"
description = "CAEN DT5743 waveform CSV to HDF5 converter, pulse analysis, and advanced plotting for single PMT workflows."
authors = [{name = "Bartosz Mindur", email = "mindur@agh.edu.pl"}]
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.9"
keywords = ["waveform", "DT5743", "HDF5", "converter"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering"
]

dependencies = [
  "numpy",
  "h5py",
  "pandas",
  "matplotlib",
  "pyserial"
]

[project.urls]
Homepage = "https://github.com/bmindur/d3df_digitzer_soft"

[project.scripts]
convert-dsa90804a = "d3df_single_pmt.dsa_converter:main"
convert-dt5743 = "d3df_single_pmt.cli:main"
convert = "d3df_single_pmt.cli:main"
analyze = "d3df_single_pmt.analysis:main"
caen-hv = "d3df_single_pmt.caen_hv:main"
plot-timing = "d3df_single_pmt.plot_analysis:main"
plot-timing-vs-hv = "d3df_single_pmt.plot_timing_vs_hv:main"

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
